--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="styles.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="scripts.js"></script>
-  </head>
-  <body>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div id="big"></div>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="styles.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="scripts.js"></script>
+		<title>Javascript practice</title>
+	</head>
+	<body>
+		<div class="color" onmouseover="changeColor(this)" onmouseout="resetColor()" onclick="permaColor(this)"></div>
+		<div class="color" onmouseover="changeColor(this)" onmouseout="resetColor()" onclick="permaColor(this)"></div>
+		<div class="color" onmouseover="changeColor(this)" onmouseout="resetColor()" onclick="permaColor(this)"></div>
+		<div class="color" onmouseover="changeColor(this)" onmouseout="resetColor()"onclick="permaColor(this)"></div>
+		<div id="big"></div>
+	</body>
 </html>
